added openpgp to the website

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 
     <!-- App JS -->
     <script src="app.js"></script>
+    <script src="openpgp/openpgp.min.js"></script>
     <script src="navigation/toolbar.js"></script>
     <script src="navigation/sidebar.js"></script>
     <script src="homeView/homeView.js"></script>
