added a view for encrypting

--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,12 @@
     <!-- App JS -->
     <script src="app.js"></script>
     <script src="openpgp/openpgp.min.js"></script>
+    <script src="clearInputSvc/clearInputSvc.js"></script>
     <script src="navigation/toolbar.js"></script>
     <script src="navigation/sidebar.js"></script>
     <script src="homeView/homeView.js"></script>
     <script src="generateKeysView/generateKeysView.js"></script>
+    <script src="encryptionView/encryptionView.js"></script>
 
 </head>
 <body ng-app="encryptionDemo" layout="column">
