changed the title of the app

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-    <title>Encryption and Security</title>
+    <title>PGP Encryption</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,8 +49,8 @@
             <md-button hide-gt-md class="md-icon-button" aria-label="Menu" ng-click="ctrl.showNav()">
                 <i class="material-icons icon-button-adjust">menu</i>
             </md-button>
-            <h2 ng-if="!ctrl.isHome()"><span><a ui-sref="home">Encryption and Security</a></span></h2>
-            <h2 ng-if="ctrl.isHome()"><span>Encryption and Security</span></h2>
+            <h2 ng-if="!ctrl.isHome()"><span><a ui-sref="home">PGP Encryption</a></span></h2>
+            <h2 ng-if="ctrl.isHome()"><span>PGP Encryption</span></h2>
         </div>
     </md-toolbar>
 
