added a view for decryption

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
     <script src="homeView/homeView.js"></script>
     <script src="generateKeysView/generateKeysView.js"></script>
     <script src="encryptionView/encryptionView.js"></script>
+    <script src="decryptionView/decryptionView.js"></script>
 
 </head>
 <body ng-app="encryptionDemo" layout="column">
