removed the form name attribute

--- a/public/encryptionView/encryptionView.tpl.html
+++ b/public/encryptionView/encryptionView.tpl.html
@@ -1,6 +1,6 @@
 <md-content layout-padding>
     <h2 flex>Encrypt</h2>
-    <form flex name="newKeyForm">
+    <form flex>
         <div layout="column">
             <md-input-container flex>
                 <label>Recipient</label>
