--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <script src="generateKeysView/generateKeysView.js"></script>
     <script src="encryptionView/encryptionView.js"></script>
     <script src="decryptionView/decryptionView.js"></script>
+    <script src="saltView/saltView.js"></script>
 
 </head>
 <body ng-app="encryptionDemo" layout="column">
